Update project to .NET 9.0 and modify component initialization
- Updated `ASPNETCoreBlazor.csproj` to target .NET 9.0.
- Added package reference for `Microsoft.AspNetCore.Components.WebAssembly.Server` v9.0.3.
- Added project reference to `BlazorWebAssembly.csproj`.
- Commented out the addition of the `<App>` component in `Program.cs`, retaining the `HeadOutlet` component.

--- a/ASPNETCoreBlazor/ASPNETCoreBlazor/ASPNETCoreBlazor.csproj
+++ b/ASPNETCoreBlazor/ASPNETCoreBlazor/ASPNETCoreBlazor.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BlazorWebAssembly\BlazorWebAssembly.csproj" />
+  </ItemGroup>
+
 </Project>
